Checking CSS Overview; one contrast issue solved. Text color in footer changed

--- a/styles/base.css
+++ b/styles/base.css
@@ -212,6 +212,6 @@ footer {
 }
 
 footer p {
-    color: var(--second-color);
+    color: var(--text-color-dark-bkg);
     padding-top: 1rem;
 }
